--- a/.github/workflows/build-base-compile.yml
+++ b/.github/workflows/build-base-compile.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: base-compile/Dockerfile
           push: true
           tags: kaylor/compile/base:latest
           platforms: linux/amd64,linux/arm64
