--- a/base-compile/Dockerfile
+++ b/base-compile/Dockerfile
@@ -2,13 +2,13 @@
 FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
-ENV TZ=Asia/Shanghai
+# ENV TZ=Asia/Shanghai
 # 维护者
 LABEL maintainer="kaylor.chen@qq.com"
 
-RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-    sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-    sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-	apt update && \
-	apt install -y dh-python debhelper git devscripts fakeroot python3-bloom
+# RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+#     sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+#     sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+RUN	apt update && \
+	apt install -y --no-install-recommends dh-python debhelper git devscripts fakeroot python3-bloom
 
