--- a/rk3588_pt2onnx/Dockerfile
+++ b/rk3588_pt2onnx/Dockerfile
@@ -14,3 +14,6 @@ RUN	apt update && \
 	apt install -y --no-install-recommends python3 python3-pip && \
   pip install -r /tmp/requirements.txt
 
+RUN apt install -y --no-install-recommends libgl-dev libglib2.0-0 && \
+    pip install onnx
+
