--- a/rk3588_pt2onnx/Dockerfile
+++ b/rk3588_pt2onnx/Dockerfile
@@ -14,6 +14,6 @@ RUN	apt update && \
 	apt install -y --no-install-recommends python3 python3-pip && \
   pip install -r /tmp/requirements.txt
 
-RUN apt install -y --no-install-recommends libgl-dev libglib2.0-0 && \
+RUN apt install -y --no-install-recommends libgl-dev libglib2.0-0 python-is-python3 && \
     pip install onnx
 
