--- a/openvpn/Dockerfile
+++ b/openvpn/Dockerfile
@@ -10,3 +10,15 @@ RUN apt update && \
     apt install -y systemd systemd-sysv openvpn iproute2 kmod && \
     apt clean
 
+# 删除无关的服务
+RUN cd /lib/systemd/system/sysinit.target.wants/; \
+  ls | grep -v systemd-tmpfiles-setup | xargs rm -f $1
+
+RUN rm -f /lib/systemd/system/multi-user.target.wants/*; \
+  rm -f /etc/systemd/system/*.wants/*; \
+  rm -f /lib/systemd/system/local-fs.target.wants/*; \
+  rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
+  rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
+  rm -f /lib/systemd/system/basic.target.wants/*; \
+  rm -f /lib/systemd/system/anaconda.target.wants/*;
+
