--- a/openvpn/Dockerfile
+++ b/openvpn/Dockerfile
@@ -1,24 +1,18 @@
 # Version 1.0
-FROM ubuntu:22.04
+FROM eniocarboni/docker-ubuntu-systemd:20.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Asia/Shanghai
 # 维护者
 LABEL maintainer="kaylor.chen@qq.com"
 
+
 RUN apt update && \
-    apt install -y systemd systemd-sysv openvpn iproute2 kmod && \
+    apt install -y systemd systemd-sysv openvpn iproute2 kmod wget openssl ca-certificates iptables && \
     apt clean
 
-# 删除无关的服务
-RUN cd /lib/systemd/system/sysinit.target.wants/; \
-  ls | grep -v systemd-tmpfiles-setup | xargs rm -f $1
-
-RUN rm -f /lib/systemd/system/multi-user.target.wants/*; \
-  rm -f /etc/systemd/system/*.wants/*; \
-  rm -f /lib/systemd/system/local-fs.target.wants/*; \
-  rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
-  rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
-  rm -f /lib/systemd/system/basic.target.wants/*; \
-  rm -f /lib/systemd/system/anaconda.target.wants/*;
+RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+    sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+    sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+    apt clean
 
