--- a/openvpn/Dockerfile
+++ b/openvpn/Dockerfile
@@ -8,11 +8,12 @@ LABEL maintainer="kaylor.chen@qq.com"
 
 
 RUN apt update && \
-    apt install -y systemd systemd-sysv openvpn iproute2 kmod wget openssl ca-certificates iptables && \
+    apt install -y easy-rsa vim systemd systemd-sysv iproute2 kmod wget openssl ca-certificates iptables && \
     apt clean
 
 RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
     sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
     sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
     apt clean
+
 
