--- a/base-compile/Dockerfile
+++ b/base-compile/Dockerfile
@@ -11,5 +11,7 @@ LABEL maintainer="kaylor.chen@qq.com"
 #     sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
 #     sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
 RUN	apt update && \
-	apt install -y --no-install-recommends dh-python debhelper git devscripts fakeroot python3-bloom cmake equivs
+		apt install -y --no-install-recommends dh-python debhelper git devscripts fakeroot python3-bloom cmake equivs && \
+		apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
