--- a/ubuntu-systemd/Dockerfile
+++ b/ubuntu-systemd/Dockerfile
@@ -1,3 +1,4 @@
+ARG PLATFORM
 FROM kaylor/ubuntu:22.04
 
 STOPSIGNAL SIGRTMIN+3
@@ -9,5 +10,5 @@ RUN apt-get update ; \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* ;\ 
     printf '#!/bin/sh\nexit 0\n' > /usr/sbin/policy-rc.d
 
-COPY ubuntu-systemd/init /init
+COPY ubuntu-systemd/init.{PLATFORM} /init
 CMD ["/init"]
