--- a/.github/workflows/build-ubuntu-systemd.yml
+++ b/.github/workflows/build-ubuntu-systemd.yml
@@ -11,23 +11,18 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        architecture: [amd64, arm64]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Create init
         run: |
-          if [ ${{ matrix.architecture}} == arm64 ]; then
-            sudo apt install -y g++-aarch64-linux-gnu
-            sudo aarch64-linux-gnu-g++ ubuntu-systemd/init.cpp -o ubuntu-systemd/init
-          else
-            sudo apt install -y g++
-            sudo g++ ubuntu-systemd/init.cpp -o ubuntu-systemd/init
-          fi
-          file ubuntu-systemd/init
+          sudo apt install -y g++-aarch64-linux-gnu
+          sudo aarch64-linux-gnu-g++ ubuntu-systemd/init.cpp -o ubuntu-systemd/init.arm64
+          sudo apt install -y g++
+          sudo g++ ubuntu-systemd/init.cpp -o ubuntu-systemd/init.amd64
+          file ubuntu-systemd/init.arm64
+          file ubuntu-systemd/init.amd64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -45,7 +40,8 @@ jobs:
           file: ubuntu-systemd/Dockerfile
           push: true
           tags: kaylor/ubuntu-systemd:latest
-          platforms: linux/${{ matrix.architecture}}
+          platforms: linux/arm64, linux/amd64
+          build-args: PLATFORM=arm64, PLATFORM=amd64
 
       - name: Logout of DockerHub
         run: docker logout
