--- a/ubuntu-3588-rootfs/Dockerfile
+++ b/ubuntu-3588-rootfs/Dockerfile
@@ -12,6 +12,7 @@ COPY kaylor-keyring.gpg /etc/apt/keyrings/
 COPY rk3588-kaylor.list /etc/apt/sources.list.d/
 
 RUN apt update && apt install -y --no-install-recommends gcc g++ cmake openssh-server &&  \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
     echo "PermitRootLogin yes" | tee -a /etc/ssh/sshd_config
 
 RUN echo 'root:root' | chpasswd
@@ -20,7 +21,8 @@ RUN apt update && apt install -y --no-install-recommends vim libopencv-dev g++ g
     fakeroot devscripts libspdlog-dev libsystemd-dev libcap-dev liblz4-dev \
     libgcrypt-dev libzstd-dev debhelper rknpu2-dev librockchip-mpp-dev librga-dev \
     libstb-dev libturbojpeg0-dev libjpeg-turbo8-dev librga2 libboost-dev \
-    libboost-system1.74-dev kaylordut-dev
+    libboost-system1.74-dev kaylordut-dev && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* 
 
 # 设置当容器启动时自动运行 SSH 服务
 # 使用 init 脚本启动 SSH 服务
