add beta image for rknn

--- a/rk3588_onnx2rknn/Dockerfile-beta
+++ b/rk3588_onnx2rknn/Dockerfile-beta
@@ -11,9 +11,9 @@ RUN apt update && \
     apt install -y --no-install-recommends libgl1 libglib2.0-0 android-tools-adb && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-COPY rk3588_onnx2rknn/rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl
+COPY rk3588_onnx2rknn/rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl /root/rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl
 
-RUN pip3 install rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl
+RUN pip3 install /root/rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl
 
 COPY rk3588_onnx2rknn/requirements-beta.txt requirements-beta.txt
 
