--- a/rk3588_onnx2rknn/Dockerfile-beta
+++ b/rk3588_onnx2rknn/Dockerfile-beta
@@ -6,9 +6,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 LABEL maintainer="kaylor.chen@qq.com"
 
 RUN apt update && \
-    apt install -y --no-install-recommends python3 python-is-python3 && \
-    apt install -y --no-install-recommends python3-dev python3-pip gcc vim libprotobuf-dev zlib1g zlib1g-dev libsm6 && \
-    apt install -y --no-install-recommends libgl1 libglib2.0-0 android-tools-adb && \
+    apt install -y --no-install-recommends python3 python-is-python3 python3-dev python3-pip gcc vim libprotobuf-dev zlib1g zlib1g-dev libsm6 libgl1 libglib2.0-0 android-tools-adb && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 COPY rk3588_onnx2rknn/rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl /root/rknn_toolkit2-2.0.0b12+1fc94019-cp310-cp310-linux_x86_64.whl
