add nvidia docker

--- a/l4t-base/Dockerfile
+++ b/l4t-base/Dockerfile
@@ -11,6 +11,7 @@ RUN apt update && \
 		yes ' ' | apt install -y --no-install-recommends curl && \
 		curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
 		echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://mirrors.cloud.tencent.com/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null && \
+		apt update && \
 		apt install -y --no-install-recommends ros-humble-ros-base ros-dev-tools && \
 		apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
