--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -9,19 +9,22 @@ LABEL maintainer="kaylor.chen@qq.com"
 #     sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
 #     sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list
 
+RUN	mkdir -p /opt/nvidia/l4t-packages/ && \
+		touch /opt/nvidia/l4t-packages/.nv-l4t-disable-boot-fw-update-in-preinstall && \
+		apt update && \
+		yes ' ' | apt install -y --no-install-recommends wget ca-certificates && \ 
+		apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 RUN cat > /etc/apt/sources.list.d/l4t-base.list <<EOF
-deb https://repo.download.nvidia.com/jetson/common r36.3 main
-deb https://repo.download.nvidia.com/jetson/t234 r36.3 main
-deb https://repo.download.nvidia.com/jetson/ffmpeg r36.3 main
+deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://repo.download.nvidia.com/jetson/common r36.3 main
+deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://repo.download.nvidia.com/jetson/t234 r36.3 main
+deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://repo.download.nvidia.com/jetson/ffmpeg r36.3 main
 EOF
 
 COPY l4t-base/packages.list packages.list
 
-RUN	mkdir -p /opt/nvidia/l4t-packages/ && \
-		touch /opt/nvidia/l4t-packages/.nv-l4t-disable-boot-fw-update-in-preinstall && \
-		apt update && \
-		yes ' ' | apt install -y --no-install-recommends wget ca-certificates && \
-		wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
+RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
 		dpkg -i cuda-keyring_1.1-1_all.deb && \
 		apt update && \
 		apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages.list) && \
