--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -17,12 +17,13 @@ RUN	mkdir -p /opt/nvidia/l4t-packages/ && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN cat > /etc/apt/sources.list.d/l4t-base.list <<EOF
-deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://repo.download.nvidia.com/jetson/common r36.3 main
-deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://repo.download.nvidia.com/jetson/t234 r36.3 main
-deb [signed-by=/usr/share/keyrings/cuda-archive-keyring.gpg] https://repo.download.nvidia.com/jetson/ffmpeg r36.3 main
+deb [signed-by=/usr/share/keyrings/jetson-ota-public.gpg] https://repo.download.nvidia.com/jetson/common r36.3 main
+deb [signed-by=/usr/share/keyrings/jetson-ota-public.gpg] https://repo.download.nvidia.com/jetson/t234 r36.3 main
+deb [signed-by=/usr/share/keyrings/jetson-ota-public.gpg] https://repo.download.nvidia.com/jetson/ffmpeg r36.3 main
 EOF
 
 COPY l4t-base/packages.list packages.list
+COPY l4t-base/jetson-ota-public.gpg /usr/share/keyrings/jetson-ota-public.gpg
 
 RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
 		dpkg -i cuda-keyring_1.1-1_all.deb && \
