--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -12,7 +12,7 @@ LABEL maintainer="kaylor.chen@qq.com"
 RUN	mkdir -p /opt/nvidia/l4t-packages/ && \
 		touch /opt/nvidia/l4t-packages/.nv-l4t-disable-boot-fw-update-in-preinstall && \
 		apt update && \
-		yes ' ' | apt install -y --no-install-recommends wget ca-certificates && \ 
+		yes ' ' | apt install -y --no-install-recommends wget ca-certificates cpio && \ 
 		apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
@@ -23,11 +23,13 @@ deb [signed-by=/usr/share/keyrings/jetson-ota-public.gpg] https://repo.download.
 EOF
 
 COPY l4t-base/packages.list packages.list
+COPY l4t-base/pre_packages.list pre_packages.list
 COPY l4t-base/jetson-ota-public.gpg /usr/share/keyrings/jetson-ota-public.gpg
 
 RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
 		dpkg -i cuda-keyring_1.1-1_all.deb && \
 		apt update && \
+		apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' pre_packages.list) && \
 		apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages.list) && \
 		apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
