--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -28,9 +28,9 @@ COPY l4t-base/jetson-ota-public.gpg /usr/share/keyrings/jetson-ota-public.gpg
 
 RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
 		dpkg -i cuda-keyring_1.1-1_all.deb && \
-		apt update && \
-		apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' pre_packages.list) && \
-		apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages.list) && \
+		apt-get update && \
+		apt-get install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' pre_packages.list) && \
+		# apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages.list) && \
 		apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
