--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -23,12 +23,14 @@ deb [signed-by=/usr/share/keyrings/jetson-ota-public.gpg] https://repo.download.
 EOF
 
 COPY l4t-base/packages.list packages.list
-COPY l4t-base/pre_packages.list pre_packages.list
+COPY l4t-base/packages_l4t.list packages_l4t.list
 COPY l4t-base/jetson-ota-public.gpg /usr/share/keyrings/jetson-ota-public.gpg
 
 RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
-		dpkg -i cuda-keyring_1.1-1_all.deb && \
-		apt-get update && \
+		dpkg -i cuda-keyring_1.1-1_all.deb
+
+RUN	apt-get update && \
+		apt-get upgrade -y && \
 		apt-get install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' pre_packages.list) && \
 		# apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages.list) && \
 		apt-get clean && \
