--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -31,7 +31,7 @@ RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm
 
 RUN	apt-get update && \
 		apt-get upgrade -y && \
-		apt-get install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' pre_packages.list) && \
+		apt-get install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages_l4t.list) && \
 		# apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages.list) && \
 		apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
