--- a/.github/workflows/build-l4t-r36.3_base.yml
+++ b/.github/workflows/build-l4t-r36.3_base.yml
@@ -3,12 +3,12 @@ name: Build and push l4t r36.3 Docker image
 on:
   push:
     paths:
-      - 'l4t-base/Dockerfile_r36.3'
-      - 'l4t-base/packages.list'
+      - 'l4t-base/Dockerfile_r36.3_base'
+      - 'l4t-base/packages_l4t.list'
   pull_request:
     paths:
-      - 'l4t-base/packages.list'
-      - 'l4t-base/Dockerfile_r36.3'
+      - 'l4t-base/packages_l4t.list'
+      - 'l4t-base/Dockerfile_r36.3_base'
 
 jobs:
   build-and-push:
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: l4t-base/Dockerfile_r36.3
+          file: l4t-base/Dockerfile_r36.3_base
           push: true
           tags: kaylor/l4t-base:r36.3.0_base
           platforms: linux/arm64
