--- a/.github/workflows/build-l4t-r36.3_release.yml
+++ b/.github/workflows/build-l4t-r36.3_release.yml
@@ -1,14 +1,14 @@
-name: Build and push l4t r36.3 cuda base Docker image
+name: Build and push l4t r36.3 release Docker image
 
 on:
   push:
     paths:
-      - 'l4t-base/Dockerfile_r36.3_cuda'
-      - 'l4t-base/packages_only_cuda.list'
+      - 'l4t-base/Dockerfile_r36.3'
+      - 'l4t-base/packages.list'
   pull_request:
     paths:
-      - 'l4t-base/Dockerfile_r36.3_cuda'
-      - 'l4t-base/packages_only_cuda.list'
+      - 'l4t-base/Dockerfile_r36.3'
+      - 'l4t-base/packages.list'
 
 jobs:
   build-and-push:
@@ -30,9 +30,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: l4t-base/Dockerfile_r36.3_cuda
+          file: l4t-base/Dockerfile_r36.3
           push: true
-          tags: kaylor/l4t-base:r36.3.0_cuda
+          tags: kaylor/l4t-base:r36.3.0_release
           platforms: linux/arm64
 
       - name: Logout of DockerHub
