--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -29,6 +29,8 @@ LABEL maintainer="kaylor.chen@qq.com"
 # RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
 # 		dpkg -i cuda-keyring_1.1-1_all.deb
 
+RUN cat /etc/apt/sources.list.d/*
+
 RUN	apt-get update && \
 		apt-get upgrade -y && \
 		# apt-get install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages_l4t.list) && \
