--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -29,7 +29,7 @@ LABEL maintainer="kaylor.chen@qq.com"
 # RUN	wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/arm64/cuda-keyring_1.1-1_all.deb && \ 
 # 		dpkg -i cuda-keyring_1.1-1_all.deb
 
-RUN cat /etc/apt/sources.list.d/*
+RUN cat /etc/apt/sources.list.d/* && ls -lh /etc/apt/sources.list.d/
 
 RUN	apt-get update && \
 		apt-get upgrade -y && \
