--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -32,7 +32,7 @@ LABEL maintainer="kaylor.chen@qq.com"
 RUN	mv /etc/apt/sources.list.d/nvidia-l4t-apt-source.list /etc/apt/sources.list.d/nvidia-l4t-apt-source.list.save && \
 		apt-get update && \
 		# apt-get install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages_l4t.list) && \
-		apt install -y --no-install-recommends $(sed ':label;N;s/\n/ /;b label' packages.list) && \
+		apt install -y --no-install-recommends --allow-downgrades $(sed ':label;N;s/\n/ /;b label' packages.list) && \
 		apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
