--- a/l4t-base/Dockerfile_r36.3
+++ b/l4t-base/Dockerfile_r36.3
@@ -22,7 +22,7 @@ LABEL maintainer="kaylor.chen@qq.com"
 # deb [signed-by=/usr/share/keyrings/jetson-ota-public.gpg] https://repo.download.nvidia.com/jetson/ffmpeg r36.3 main
 # EOF
 
-# COPY l4t-base/packages.list packages.list
+COPY l4t-base/packages.list packages.list
 # COPY l4t-base/packages_l4t.list packages_l4t.list
 # COPY l4t-base/jetson-ota-public.gpg /usr/share/keyrings/jetson-ota-public.gpg
 
