--- a/.github/workflows/build-l4t-r36.3_cuda.yml
+++ b/.github/workflows/build-l4t-r36.3_cuda.yml
@@ -3,12 +3,12 @@ name: Build and push l4t r36.3 cuda Docker image
 on:
   push:
     paths:
-      - 'l4t-base/Dockerfile_r36.3.cuda'
+      - 'l4t-base/Dockerfile_r36.3_cuda'
       - 'l4t-base/packages_cuda.list'
   pull_request:
     paths:
       - 'l4t-base/packages_cuda.list'
-      - 'l4t-base/Dockerfile_r36.3.cuda'
+      - 'l4t-base/Dockerfile_r36.3_cuda'
 
 jobs:
   build-and-push:
@@ -30,7 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: l4t-base/Dockerfile_r36.3.cuda
+          file: l4t-base/Dockerfile_r36.3_cuda
           push: true
           tags: kaylor/l4t-base:r36.3.0_cuda
           platforms: linux/arm64
