--- a/.github/workflows/build-microros.yml
+++ b/.github/workflows/build-microros.yml
@@ -30,7 +30,7 @@ jobs:
           context: .
           file: microros/Dockerfile
           push: true
-          tags: kaylor/microros/base:humble
+          tags: kaylorchen/microros/base:humble
           platforms: linux/amd64
 
       - name: Logout of DockerHub
