--- a/microros/Dockerfile
+++ b/microros/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update && \
     source /uros_ws/install/setup.bash && \ 
     cd /uros_ws && \
     ros2 run micro_ros_setup create_firmware_ws.sh freertos olimex-stm32-e407 && \
+    ros2 run micro_ros_setup configure_firmware.sh add_two_ints_service -t udp -i 192.168.111.111 -p 8888 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
