--- a/rk3588_onnx2rknn/Dockerfile-2.3.0
+++ b/rk3588_onnx2rknn/Dockerfile-2.3.0
@@ -6,13 +6,14 @@ ENV TZ=Asia/Shanghai
 # 维护者
 LABEL maintainer="kaylor.chen@qq.com"
 
-RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-    sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list 
+#RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+#    sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list 
 RUN	apt-get update && \
     apt-get install -y --no-install-recommends python3 python3-pip && \
     apt-get install -y --no-install-recommends libgl-dev libglib2.0-0 python-is-python3 && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 COPY rk3588_onnx2rknn/requirements_cp310-2.3.0.txt /root/requirements.txt
-RUN pip install -r /root/requirements.txt -i https://mirrors.cloud.tencent.com/pypi/simple && pip cache purge
+#RUN pip install -r /root/requirements.txt -i https://mirrors.cloud.tencent.com/pypi/simple && pip cache purge
+RUN pip install -r /root/requirements.txt 
 COPY rk3588_onnx2rknn/rknn_toolkit2-2.3.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl /root/rknn_toolkit2-2.3.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
 RUN pip install /root/rknn_toolkit2-2.3.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl && pip cache purge
