--- a/isaac/Dockerfile
+++ b/isaac/Dockerfile
@@ -9,4 +9,4 @@ LABEL maintainer="kaylor.chen@qq.com"
 RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
     sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
     sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list
-RUN pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128 && pip cache purge
+RUN /isaac-sim/kit/python/bin/python3 -m pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128 && /isaac-sim/kit/python/bin/python3 -m pip cache purge
