--- a/windows/win11/docker-compose-win11.yml
+++ b/windows/win11/docker-compose-win11.yml
@@ -9,7 +9,7 @@ services:
       CPU_CORES: "4"
       USERNAME: "kaylor"
       PASSWORD: " "
-      ARGUMENTS: "-device qemu-xhci -device usb-host,vendorid=0x0c66,productid=0x000c"
+      # ARGUMENTS: "-device qemu-xhci -device usb-host,vendorid=0x0c66,productid=0x000c"
     devices:
       - /dev/kvm
       - /dev/net/tun
@@ -21,7 +21,7 @@ services:
       - 13389:3389/tcp
       - 13389:3389/udp
     volumes:
-      - ./windows:/storage
+      - ./windows11:/storage
       - /mnt/data/windows:/data
-    restart: always
+    # restart: always
     stop_grace_period: 2m
