--- a/rk3588_llm/Dockerfile
+++ b/rk3588_llm/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 # ENV TZ=Asia/Shanghai
@@ -9,7 +9,11 @@ RUN apt update && \
     apt install -y --no-install-recommends python3 python-is-python3 && \
     apt install -y --no-install-recommends python3-dev python3-pip python3-tk
 
-COPY rk3588_llm/rkllm_toolkit-1.1.4-cp38-cp38-linux_x86_64.whl rkllm_toolkit-1.1.4-cp38-cp38-linux_x86_64.whl
+COPY rk3588_llm/requirements_rwkv7.txt requirements.txt
 
-RUN pip3 install rkllm_toolkit-1.1.4-cp38-cp38-linux_x86_64.whl
+RUN pip3 install -r requirements.txt
+
+COPY rk3588_llm/rkllm_toolkit-1.2.1-cp310-cp310-linux_x86_64.whl rkllm_toolkit-1.2.1-cp310-cp310-linux_x86_64.whl
+
+RUN pip3 install rkllm_toolkit-1.2.1-cp310-cp310-linux_x86_64.whl
 
