--- a/rk3588_onnx2rknn/Dockerfile-2.3.2
+++ b/rk3588_onnx2rknn/Dockerfile-2.3.2
@@ -1,19 +1,25 @@
+#RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+#    sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list 
+#RUN pip install -r /root/requirements.txt -i https://mirrors.cloud.tencent.com/pypi/simple && pip cache purge
+
 # Version 1.0
 FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Asia/Shanghai
-# 维护者
 LABEL maintainer="kaylor.chen@qq.com"
 
-#RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-#    sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list 
-RUN	apt-get update && \
+RUN apt-get update && \
     apt-get install -y --no-install-recommends python3 python3-pip && \
     apt-get install -y --no-install-recommends libgl-dev libglib2.0-0 python-is-python3 && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-COPY rk3588_onnx2rknn/requirements_cp310-2.3.2.txt /root/requirements.txt
-#RUN pip install -r /root/requirements.txt -i https://mirrors.cloud.tencent.com/pypi/simple && pip cache purge
-RUN pip install -r /root/requirements.txt && pip cache purge
-COPY rk3588_onnx2rknn/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl /root/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
-RUN pip install /root/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl && pip cache purge
+
+# 复制文件到临时目录，安装后立即删除
+COPY rk3588_onnx2rknn/requirements_cp310-2.3.2.txt /tmp/requirements.txt
+COPY rk3588_onnx2rknn/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl /tmp/rknn_toolkit2.whl
+
+RUN pip install -r /tmp/requirements.txt && \
+    pip install /tmp/rknn_toolkit2.whl && \
+    pip cache purge && \
+    # 重要：安装完成后立即删除源文件
+    rm -f /tmp/requirements.txt /tmp/rknn_toolkit2.whl
