--- a/rk3588_onnx2rknn/Dockerfile-2.3.2
+++ b/rk3588_onnx2rknn/Dockerfile-2.3.2
@@ -19,7 +19,7 @@ COPY rk3588_onnx2rknn/requirements_cp310-2.3.2.txt /tmp/requirements.txt
 COPY rk3588_onnx2rknn/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl /tmp/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
 
 RUN pip install -r /tmp/requirements.txt && \
-    pip install /tmp/rknn_toolkit2.whl && \
+    pip install /tmp/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl && \
     pip cache purge && \
     # 重要：安装完成后立即删除源文件
     rm -f /tmp/requirements.txt /tmp/rknn_toolkit2-2.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
