add docker for yolo

--- a/yolo/Dockerfile
+++ b/yolo/Dockerfile
@@ -1,20 +1,16 @@
 # Version 1.0
-FROM ubuntu:22.04
+FROM ultralytics/ultralytics:8.3.248
 
 ENV DEBIAN_FRONTEND=noninteractive
-# ENV TZ=Asia/Shanghai
+ENV TZ=Asia/Shanghai
 # 维护者
 LABEL maintainer="kaylor.chen@qq.com"
 
-# RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-#     sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-#     sed -i "s/ports.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-RUN	apt update && \
-	apt install -y --no-install-recommends python3 python3-pip && \
-    pip install ultralytics && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-RUN apt update && \
-    apt install -y --no-install-recommends libgl-dev libglib2.0-0 python-is-python3 && \
+RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+    sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
+	sed -i.bak -e 's/^\(\s*\)a = random.uniform(-self.degrees, self.degrees)/\1# a = random.uniform(-self.degrees, self.degrees)/' -e 's/^\(\s*\)# \(a += random.choice(\[-180, -90, 0, 90\])\)/\1\2/' /ultralytics/ultralytics/data/augment.py
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends libgl-dev libglib2.0-0 python-is-python3 && \
     pip install onnx && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
