--- a/yolo/Dockerfile
+++ b/yolo/Dockerfile
@@ -8,7 +8,7 @@ LABEL maintainer="kaylor.chen@qq.com"
 
 RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
     sed -i "s/security.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.list && \
-	sed -i.bak -e 's/^\(\s*\)a = random.uniform(-self.degrees, self.degrees)/\1# a = random.uniform(-self.degrees, self.degrees)/' -e 's/^\(\s*\)# \(a += random.choice(\[-180, -90, 0, 90\])\)/\1\2/' /ultralytics/ultralytics/data/augment.py
+	sed -i.bak  -e 's/^\(\s*\)# \(a += random.choice(\[-180, -90, 0, 90\])\)/\1\2/' /ultralytics/ultralytics/data/augment.py
 RUN apt-get update && \
     apt-get install -y --no-install-recommends libgl-dev libglib2.0-0 python-is-python3 && \
     pip install onnx && \
