--- a/yolo/Dockerfile
+++ b/yolo/Dockerfile
@@ -11,7 +11,7 @@ RUN sed -i "s/archive.ubuntu.com/mirrors.cloud.tencent.com/g" /etc/apt/sources.l
 	sed -i.bak  -e 's/^\(\s*\)# \(a += random.choice(\[-180, -90, 0, 90\])\)/\1\2/' /ultralytics/ultralytics/data/augment.py
 RUN apt-get update && \
     apt-get install -y --no-install-recommends libgl-dev libglib2.0-0 python-is-python3 && \
-    pip install onnx && \
+    pip install onnx tensorboard && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 
